Fixed play and pause task z-index (task manager module) ande something else but i dont remember because I am hurry.

--- a/public/modules/task-manager/main.css
+++ b/public/modules/task-manager/main.css
@@ -57,6 +57,7 @@
 }
 .board-list-title {
   margin-top: 15px;
+  padding: 0px;
   color: #fff;
 }
 .board {
@@ -97,7 +98,7 @@
   margin-bottom: 10px;
 }
 .task-info {
-  text-align: justify;
+  text-align: left;
 }
 .no-task {
   padding-bottom: 5px;
@@ -141,6 +142,7 @@
 .task:hover .pause,
 .task:hover .done {
   opacity: 1;
+  z-index: 1;
 }
 .task:hover {
   background-color: #eee;
@@ -247,6 +249,7 @@
   border-radius: 50%;
   margin: 5px;
   transition: 0.3s all ease;
+  cursor: pointer;
 }
 .go-back:hover {
   box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
@@ -270,9 +273,12 @@
   margin-bottom: 10px;
 }
 .text-fixed {
-  /* padding: 10px; */
   font-size: 14px;
   text-align: left;
+}
+.panel-body.text-fixed {
+  padding: 10px;
+  font-size: 12px;
 }
 .panel-heading.fixed {
   padding: 10px;
